# serverHTTP

./: BeginRecord.cpp  BeginRecord.h  CMakeLists.txt  ConfigFile.cpp  ConfigFile.h  ConnectionManager.cpp  ConnectionManager.h  FCGIManager.cpp  FCGIManager.h  HTTPManager.cpp  HTTPManager.h  Parser.cpp  Parser.h  README.md  Record.cpp  Record.h  StreamRecord.cpp  StreamRecord.h  config.cfg  constants.h  fcgi.cpp  fcgi2.cpp  main.cpp  makefile  serwerHTTP.cpp  serwerTCP.cpp
